--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,17 @@ attrs==21.2.0
 backcall==0.2.0
 beautifulsoup4==4.9.3
 bleach==3.3.1
+certifi==2021.5.30
 cffi==1.14.6
+charset-normalizer==2.0.3
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
+idna==3.2
 ipykernel==6.0.3
 ipython==7.25.0
 ipython-genutils==0.2.0
@@ -47,6 +53,7 @@ python-dateutil==2.8.2
 pyzmq==22.1.0
 qtconsole==5.1.1
 QtPy==1.9.0
+requests==2.26.0
 selenium==3.141.0
 Send2Trash==1.7.1
 six==1.16.0
@@ -57,5 +64,6 @@ tornado==6.1
 traitlets==5.0.5
 urllib3==1.26.6
 wcwidth==0.2.5
+webdriver-manager==3.4.2
 webencodings==0.5.1
 widgetsnbextension==3.5.1
